Remove deprecated URI constructor usage for newer JVMs