@@ -8,6 +8,7 @@ import java.io.BufferedInputStream;
 import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
 import java.net.URL;
 import java.net.URLConnection;
 import java.net.URLDecoder;
@@ -62,7 +63,7 @@ public class HTTPURLConfigurationLocation extends ConfigurationLocation {
 
     @NotNull
     URLConnection connectionTo(final String location) throws IOException {
-        final URL url = new URL(location);
+        final URL url = URI.create(location).toURL();
 
         final URLConnection urlConnection = url.openConnection();
         urlConnection.setConnectTimeout(HTTP_TIMEOUT_IN_MS);
